test/files/neg/aladdin1055.check
Test_1.scala:3: warning: match may not be exhaustive.
It would fail on the following input: (_ : this.<local child>)
  def foo(t: A.T) = t match {
                    ^
1 warning
error: No warnings can be incurred under -Werror.
